0.2.5
-----
1. Use a pin icon for pin/unpin actions.
2. Allow 'My Music', etc, to be collapsed.
3. Add dynamic playlists entry to menus.

0.2.4
-----
1. Fix position of play/pause and stop button in mobile layout when stop button
   is enabled.
2. Landscape layout for mobile now playing.
3. Handle muted players; show speaker icon with line through, toggle mute with
   long press on icon.
4. Fix reading default album sort values from server.
5. Reduce CPU usage during playback by using HTML5 progressbar not v-slider.
6. Add options to control drawing of background.
7. Make display of technical info optional, and disabled by default.
8. Disable now playing background by default.

0.2.3
-----
 1. Fix add/edit alarm dialog not showing.
 2. Fix queue background cover not being drawn initially on mobile.
 3. Check for metadata, and cover, changes for current track in queue if it is a
    radio stream (0 duration).
 4. Fix mobile layout now playing info background and size.
 5. Draw stretched cover as now-playing background.
 6. Allow specifying player in URL via "?player=<mac>"
 7. Add option to show stop button.
 8. Fix translations not working on Android Firefox.
 9. Don't add play/add icons to sub-toolbar of top-level items (e.g. Artists,
    Albums, etc).
10. Don't crop radio logos when browsing.

0.2.2
-----
 1. Fix cover display when re-ordering favourites.
 2. Fix renmaming and deleting favourites.
 3. Use curent cover as queue background.
 4. Use curent artist, album, etc. image as browse background.
 5. When adding/playing a selection, call commands sequentially and wait for
    each to complete before doing the next.
 6. Revert cover change, and use artwork_url/coverid if supplied.
 7. Re-add option to sort favourites, disables drag'n'drop ordering.
 8. Add button to save default UI settings, and pinned items, on server.
 9. Re-add swipe to change view.
10. Fix error when browsing apps and there are none.
11. Remove 'More' menu option from years.